[package]
name = "dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-sys = { path = "../eth-sys", version = "0.1.0"}
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlElement',
  'Window',
]
